--- a/src/components/app/home/CounterInput.astro
+++ b/src/components/app/home/CounterInput.astro
@@ -24,10 +24,13 @@ const { label, placeholder } = getLocaleStrings(Astro).input;
 <script>
 	import { INPUT } from '@config/input.ts';
 	import { $inputText } from '@stores/index.ts';
-	import { debounce, getDefinedElementById } from '@utils/index.ts';
+	import { getDefinedElementById } from '@utils/index.ts';
+	import { debounce } from 'radashi';
 
 	// Setting the initial textarea value is handled by the preload script on the counter page
-	const updateInputText = debounce(() => $inputText.set(input.value));
+	const updateInputText = debounce({ delay: 35 }, () =>
+		$inputText.set(input.value),
+	);
 
 	const input = getDefinedElementById<HTMLTextAreaElement>(INPUT.id);
 
