--- a/src/layouts/SocialImageMetadata.astro
+++ b/src/layouts/SocialImageMetadata.astro
@@ -4,7 +4,7 @@ import {
 	type SocialPreviewId,
 } from '@config/social-preview.ts';
 import { getLocale } from '@i18n/index.ts';
-import { keysOf, pathToAbsoluteUrl } from '@utils/index.ts';
+import { entriesOf, pathToAbsoluteUrl } from '@utils/index.ts';
 import { getImage } from 'astro:assets';
 import type { WithChildren } from '../types.ts';
 
@@ -52,9 +52,15 @@ async function loadSocialImage(type: SocialPreviewId) {
 }
 
 const currentLocaleId = getLocale(Astro);
-
 const socialImages = await Promise.all(
-	keysOf(SOCIAL_PREVIEW.map).map(async (type) => {
+	entriesOf(SOCIAL_PREVIEW.map).map(async ([type, { includeInHead }]) => {
+		if (!includeInHead) {
+			return {
+				type,
+				matrix: [],
+			};
+		}
+
 		const image = await loadSocialImage(type);
 
 		if (!image) {
