feat: font size on preview page

--- a/src/pages/[localeId]/preview.astro
+++ b/src/pages/[localeId]/preview.astro
@@ -81,7 +81,7 @@ export function getStaticPaths() {
 		flex: 1;
 		width: 100%;
 		overflow: hidden;
-		font-size: calc(1vw + 1vh);
+		font-size: calc(0.9vw + 0.9vh);
 		background-image: radial-gradient(
 			farthest-corner circle at 50% 100% in oklch,
 			var(--bg-3),
@@ -100,7 +100,7 @@ export function getStaticPaths() {
 
 	p {
 		margin: 0 var(--p-lg);
-		font-size: larger;
+		font-size: var(--f-lg);
 	}
 
 	section {
