--- a/src/components/app/LocaleSelector.astro
+++ b/src/components/app/LocaleSelector.astro
@@ -66,7 +66,8 @@ const entries: EntryProps[] = entriesOf(LOCALE.map).map(
 	for (const [id, radio] of entriesOf(localeRadioMap)) {
 		radio.addEventListener(
 			'change',
-			() => (window.location.href = getRelativeLocaleUrl(id)),
+			() =>
+				(window.location.href = `${getRelativeLocaleUrl(id)}${location.search}`),
 		);
 	}
 </script>
