refactor: move Head and SocialImageMetadata from layouts to components directory

--- a/src/components/app/SocialImageMetadata.astro
+++ b/src/components/app/SocialImageMetadata.astro
@@ -6,7 +6,7 @@ import {
 import { getLocale } from '@i18n/index.ts';
 import { entriesOf, pathToAbsoluteUrl } from '@utils/index.ts';
 import { getImage } from 'astro:assets';
-import type { WithChildren } from '../types.ts';
+import type { WithChildren } from '../../types.ts';
 
 /**
  * Props for generating social media preview meta tags.
