--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Head from '@components/app/Head.astro';
 import { THEME } from '@config/theme.ts';
 import { getLocale } from '@i18n/index.ts';
 import '../styles/global.css';
@@ -6,7 +7,6 @@ import '../styles/themes.css';
 import '../styles/tokens.css';
 import '../styles/utils.css';
 import type { WithChildren } from '../types.ts';
-import Head from './Head.astro';
 
 /**
  * Props for the base HTML layout wrapper.
