feat: deindex landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import PageLayout from '@layouts/PageLayout.astro';
 ---
 
 <PageLayout>
+	<meta slot="head" name="robots" content="noindex" />
 	<main>
 		<Loader />
 	</main>
