--- a/src/components/app/Loader.astro
+++ b/src/components/app/Loader.astro
@@ -1,17 +1,12 @@
 ---
-import { LOCALE } from '@config/locale.ts';
-import { getLocaleStrings } from '@i18n/index.ts';
 import type { WithChildren } from '../../types.ts';
 
 /**
  * Props for an animated typewriter loading indicator. Based on https://uiverse.io/Nawsome/kind-mole-87, which is licensed under MIT.
  *
- * Explicitly disallows children as the loader structure is predefined.
+ * Allows children for the figcaption text.
  */
-type Props = WithChildren<false>;
-
-// Use the default locale because, at this point, we don't know the user's preferences
-const msg = getLocaleStrings(LOCALE.default).loader.label;
+type Props = WithChildren<true>;
 ---
 
 <figure>
@@ -20,11 +15,8 @@ const msg = getLocaleStrings(LOCALE.default).loader.label;
 	</div>
 	<div class="paper"></div>
 	<div class="keyboard"></div>
-	<figcaption>
-		<h1>
-			{msg}
-		</h1>
-	</figcaption>
+	<!-- This must be on the same line to prevent whitespace from being inserted -->
+	<figcaption><slot /></figcaption>
 </figure>
 
 <style>
@@ -44,11 +36,6 @@ const msg = getLocaleStrings(LOCALE.default).loader.label;
 
 	figcaption {
 		text-align: center;
-	}
-
-	h1 {
-		font-family: var(--f-header);
-		font-size: var(--f-md);
 	}
 
 	.slide {
