--- a/src/components/app/SocialImageMetadata.astro
+++ b/src/components/app/SocialImageMetadata.astro
@@ -23,12 +23,12 @@ type Props = WithChildren<false>;
 async function loadSocialImage(type: SocialPreviewId) {
 	// This should match the template string below
 	const filename =
-		`../images/${SOCIAL_PREVIEW.id}/${currentLocaleId}/${type}.png` as const;
+		`../../images/${SOCIAL_PREVIEW.id}/${currentLocaleId}/${type}.png` as const;
 
 	try {
 		// The import path must be an inline string for use with @rollup/plugin-dynamic-import-vars
 		const module: Promise<{ default: ImageMetadata }> = import(
-			`../images/${SOCIAL_PREVIEW.id}/${currentLocaleId}/${type}.png`
+			`../../images/${SOCIAL_PREVIEW.id}/${currentLocaleId}/${type}.png`
 		);
 		const image = await getImage({
 			src: module,
