--- a/src/components/app/Header.astro
+++ b/src/components/app/Header.astro
@@ -2,7 +2,7 @@
 import Link from '@components/ui/Link.astro';
 import { CLASS } from '@config/class.ts';
 import { SITE } from '@config/site.ts';
-import { getLocale, getLocaleStrings } from '@i18n/index.ts';
+import { getLocale, getLocaleMessages } from '@i18n/index.ts';
 import Logo from '@images/logo.svg';
 import type { HTMLAttributes } from 'astro/types';
 import { getRelativeLocaleUrl } from 'astro:i18n';
@@ -16,7 +16,7 @@ import type { WithChildren } from '../../types.ts';
 type Props = WithChildren<false, HTMLAttributes<'header'>>;
 
 const currentLocaleId = getLocale(Astro);
-const msg = getLocaleStrings(currentLocaleId);
+const msg = getLocaleMessages(currentLocaleId);
 
 const props = Astro.props;
 ---
