--- a/src/components/app/home/Nav.astro
+++ b/src/components/app/home/Nav.astro
@@ -2,7 +2,7 @@
 import ButtonLink from '@components/ui/ButtonLink.astro';
 import Card from '@components/ui/Card.astro';
 import { SITE } from '@config/site.ts';
-import { getLocaleStrings } from '@i18n/index.ts';
+import { getLocaleMessages } from '@i18n/index.ts';
 import {
 	CircleEllipsis,
 	Github,
@@ -19,7 +19,7 @@ import type { WithChildren } from '../../../types.ts';
  */
 type Props = WithChildren<false, HTMLAttributes<'nav'>>;
 
-const msg = getLocaleStrings(Astro).nav;
+const msg = getLocaleMessages(Astro).nav;
 
 const props = Astro.props;
 ---
