--- a/src/components/ui/Alert.astro
+++ b/src/components/ui/Alert.astro
@@ -1,5 +1,5 @@
 ---
-import { getLocaleStrings } from '@i18n/index.ts';
+import { getLocaleMessages } from '@i18n/index.ts';
 import { Info } from '@lucide/astro';
 import type { HTMLAttributes } from 'astro/types';
 import type { WithChildren } from '../../types.ts';
@@ -11,7 +11,7 @@ import Strong from './Strong.astro';
  */
 type Props = WithChildren<true, HTMLAttributes<'aside'>>;
 
-const msg = getLocaleStrings(Astro).alert.note.title;
+const msg = getLocaleMessages(Astro).alert.note.title;
 
 const props = Astro.props;
 ---
