--- a/src/components/app/OptionsSelector.astro
+++ b/src/components/app/OptionsSelector.astro
@@ -2,7 +2,7 @@
 import type { EntryProps } from '@components/ui/InputGroup.astro';
 import InputGroup from '@components/ui/InputGroup.astro';
 import { OPTION } from '@config/option.ts';
-import { getLocaleStrings } from '@i18n/index.ts';
+import { getLocaleMessages } from '@i18n/index.ts';
 import { keysOf } from '@utils/index.ts';
 import type { WithChildren } from '../../types.ts';
 
@@ -13,7 +13,7 @@ import type { WithChildren } from '../../types.ts';
  */
 type Props = WithChildren<false>;
 
-const msg = getLocaleStrings(Astro).options;
+const msg = getLocaleMessages(Astro).options;
 
 const entries: EntryProps[] = keysOf(OPTION.map).map((id) => ({
 	label: {
