--- a/src/components/app/home/LabelledOutput.astro
+++ b/src/components/app/home/LabelledOutput.astro
@@ -2,7 +2,7 @@
 import Label from '@components/ui/Label.astro';
 import Output from '@components/ui/Output.astro';
 import type { OutputId } from '@config/output.ts';
-import { getLocaleStrings } from '@i18n/index.ts';
+import { getLocaleMessages } from '@i18n/index.ts';
 import { wKey } from '@utils/index.ts';
 import type { WithChildren } from '../../../types.ts';
 
@@ -17,7 +17,7 @@ interface Props extends WithChildren<false> {
 
 const { id } = Astro.props;
 
-const msg = getLocaleStrings(Astro).output;
+const msg = getLocaleMessages(Astro).output;
 const label = msg.map[id].label;
 ---
 
