--- a/src/components/ui/Article.astro
+++ b/src/components/ui/Article.astro
@@ -1,6 +1,6 @@
 ---
 import { SITE } from '@config/site.ts';
-import { getLocaleStrings } from '@i18n/index.ts';
+import { getLocaleMessages } from '@i18n/index.ts';
 import { wKey } from '@utils/index.ts';
 import type { CollectionEntry, CollectionKey } from 'astro:content';
 import { render } from 'astro:content';
@@ -18,7 +18,7 @@ interface Props extends WithChildren<false> {
 const config = {
 	site: SITE,
 };
-const msg = getLocaleStrings(Astro);
+const msg = getLocaleMessages(Astro);
 
 const { entry, ...restProps } = Astro.props;
 
