--- a/src/components/ui/Output.astro
+++ b/src/components/ui/Output.astro
@@ -1,7 +1,7 @@
 ---
 import { INPUT } from '@config/input.ts';
 import type { OutputId } from '@config/output.ts';
-import { getLocaleStrings } from '@i18n/index.ts';
+import { getLocaleMessages } from '@i18n/index.ts';
 import { wKey } from '@utils/index.ts';
 import type { HTMLAttributes } from 'astro/types';
 import type { WithChildren } from '../../types.ts';
@@ -18,7 +18,7 @@ interface Props
 	id: OutputId;
 }
 
-const msg = getLocaleStrings(Astro).output.placeholder;
+const msg = getLocaleMessages(Astro).output.placeholder;
 
 const { id, ...restProps } = Astro.props;
 ---
