--- a/src/pages/[localeId]/index.astro
+++ b/src/pages/[localeId]/index.astro
@@ -7,7 +7,7 @@ import Nav from '@components/app/home/Nav.astro';
 import Article from '@components/ui/Article.astro';
 import { INPUT } from '@config/input.ts';
 import { LOCALE } from '@config/locale.ts';
-import { getLocale, getLocaleStrings } from '@i18n/index.ts';
+import { getLocale, getLocaleMessages } from '@i18n/index.ts';
 import PageLayout from '@layouts/PageLayout.astro';
 import { keysOf } from '@utils/index.ts';
 import { getEntry } from 'astro:content';
@@ -48,7 +48,7 @@ async function getEntryIf<TId extends string>(
 }
 
 const currentLocaleId = getLocale(Astro);
-const msg = getLocaleStrings(currentLocaleId).site;
+const msg = getLocaleMessages(currentLocaleId).site;
 const inputPreloadVars = {
 	id: INPUT.id,
 	d: INPUT.default,
